# tui-stat

./: .env  .gitignore  Cargo.toml  Makefile  README.md  data.db  download-binary.sh  install.sh  todo.db
.github/workflows/: release.yml
src/: app.rs  database.rs  lib.rs  logger.rs  main.rs
src/components/: exit.rs  footer.rs  help.rs  input.rs  list.rs  main_right.rs  mod.rs  ram.rs  selected.rs  welcome.rs
src/system/: keys_handler.rs  memory.rs  mod.rs  system_info.rs
src/types/: mod.rs
tests/: README.md  memory_integration_test.rs  types_test.rs
